--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-Hello world!
-This is wonderfo!
-haha
+<html>
+<head>
+	<title>Just for Fun</title>
+</head>
+<body>
+	<h1>Just for Fun!</h1>
+	<div>
+		Hi, This is wonderfo!<br>
+		I love the Golang! 
+	</div>
+</body>
+</html>
