--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<html>
+<html lang="en">
+
 <head>
-	<title>Just for Fun</title>
+	<meta charset="utf-8">
+	<title>Just for Fun (^_^)</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<!-- Le styles -->
+	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 </head>
+
 <body>
-	<h1>Just for Fun!</h1>
-	<div>
-		Hi, This is wonderfo!<br>
-		I love the Golang! 
-	</div>
+hello world!
+这是一个测试
+<br>
+
+ha ha, I win!
 </body>
 </html>
